k8s/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mines-backend-service
spec:
  selector:
    app: mines-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
