k8s/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mines-frontend-service
spec:
  selector:
    app: mines-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
